create for Week012

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,10 @@
         "__locale": "cpp",
         "memory": "cpp",
         "iosfwd": "cpp",
-        "typeinfo": "cpp"
+        "typeinfo": "cpp",
+        "bitset": "cpp",
+        "initializer_list": "cpp",
+        "string": "cpp",
+        "string_view": "cpp"
     }
 }
